# txnsfr

./: .gitignore  README.md  SECURITY.md
anchor/: Anchor.toml
anchor/programs/txnsfr/: Cargo.toml
anchor/programs/txnsfr/src/: constants.rs  error.rs  errors.rs  groth16.rs  lib.rs  merkle_tree.rs  state.rs  utils.rs
circuits/: keypair.circom  merkleProof.circom  transaction.circom  transaction2.circom
